--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
