--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Create .env from secrets
         run: |
           echo "REACT_APP_ADDRESS_KEY=${{ secrets.REACT_APP_ADDRESS_KEY }}" >> .env
+          echo "REACT_APP_BASE_URL=${{ secrets.REACT_APP_BASE_URL }}" >> .env
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
